@@ -4310,11 +4310,32 @@ TEBCresume(
 	 */
 
 	if (fromIdx<=toIdx && fromIdx<objc && toIdx>=0) {
-	    if (fromIdx<0) {
+	    if (fromIdx < 0) {
 		fromIdx = 0;
 	    }
 	    if (toIdx >= objc) {
 		toIdx = objc-1;
+	    }
+	    if (fromIdx == 0 && toIdx != objc-1 && !Tcl_IsShared(valuePtr)) {
+		/*
+		 * BEWARE! This is looking inside the implementation of the
+		 * list type.
+		 */
+
+		List *listPtr = valuePtr->internalRep.twoPtrValue.ptr1;
+
+		if (listPtr->refCount == 1) {
+		    TRACE(("\"%.30s\" %d %d => ", O2S(valuePtr),
+			    TclGetInt4AtPtr(pc+1), TclGetInt4AtPtr(pc+5)));
+		    for (index=toIdx+1 ; index<objc-1 ; index++) {
+			TclDecrRefCount(objv[index]);
+		    }
+		    listPtr->elemCount = toIdx+1;
+		    listPtr->canonicalFlag = 1;
+		    TclInvalidateStringRep(valuePtr);
+		    TRACE_APPEND(("%.30s\n", O2S(valuePtr)));
+		    NEXT_INST_F(9, 0, 0);
+		}
 	    }
 	    objResultPtr = Tcl_NewListObj(toIdx-fromIdx+1, objv+fromIdx);
 	} else {
@@ -5716,7 +5737,7 @@ TEBCresume(
 		}
 		result = TclIncrObj(interp, valuePtr, value2Ptr);
 		if (result == TCL_OK) {
-		    Tcl_InvalidateStringRep(dictPtr);
+		    TclInvalidateStringRep(dictPtr);
 		}
 		TclDecrRefCount(value2Ptr);
 	    }
